methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: illegal start of simple expression
  var vuBiscuit: Boolean = estSurBiscuit(;
                                         ^MethodsReturning:9: error: ';' expected but 'for' found.
   for( i <- 1 to 6){recule();}
   ^