methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  var vuBiscuit: Boolean = estSurBiscuit(;
  
  for( i <- 1 to 6){
    avance();
    if (estSurBiscuit()){vuBiscuit=true;}
  }
 	for( i <- 1 to 6){recule();}
  return vuBiscuit;
  
}